[tool.poetry]
name = "cool_logger"
version = "0.1.1"
description = ""
authors = ["Orixtosius <gultekin.omur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q --color=yes --cov=cool_logger --cov-report=term-missing"